--- a/package.json
+++ b/package.json
@@ -4,13 +4,27 @@
   "private": true,
   "homepage": "https://manoj-mk.github.io/cron_schedule",
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.10.1",
+    "@babel/preset-env": "^7.10.2",
+    "@babel/preset-react": "^7.10.1",
+    "@babel/register": "^7.10.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "babel-preset-env": "^1.7.0",
+    "css-loader": "^3.6.0",
+    "html-webpack-plugin": "^4.3.0",
+    "ignore-styles": "^5.0.1",
+    "isomorphic-style-loader": "^5.1.0",
+    "nodemon": "^2.0.4",
+    "npm-run-all": "^4.1.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "style-loader": "^1.2.1",
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.11"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -18,7 +32,12 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prod-build": "webpack ",
+    "web:client": "webpack -w",
+    "web:server": "webpack --config webpack.server.js -w",
+    "web:start": "nodemon --watch prod_build --exec node server_build/server_bundle.js",
+    "dev": "npm-run-all --parallel web:*"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -34,5 +53,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "mini-css-extract-plugin": "^0.9.0"
   }
 }
