--- a/package.json
+++ b/package.json
@@ -7,27 +7,13 @@
     "@babel/plugin-proposal-class-properties": "^7.10.1",
     "@babel/preset-env": "^7.10.2",
     "@babel/preset-react": "^7.10.1",
-    "@babel/register": "^7.10.1",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
     "babel-preset-env": "^1.7.0",
-    "css-loader": "^3.6.0",
-    "html-webpack-plugin": "^4.3.0",
-    "ignore-styles": "^5.0.1",
-    "isomorphic-style-loader": "^5.1.0",
-    "nodemon": "^2.0.4",
-    "npm-run-all": "^4.1.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
-    "style-loader": "^1.2.1",
-    "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11"
+    "react-router-dom": "^5.2.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server_build/server_bundle.js",
     "build": "react-scripts build",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
@@ -37,7 +23,8 @@
     "web:client": "webpack -w",
     "web:server": "webpack --config webpack.server.js -w",
     "web:start": "nodemon --watch prod_build --exec node server_build/server_bundle.js",
-    "dev": "npm-run-all --parallel web:*"
+    "dev": "npm-run-all --parallel web:*",
+    "heroku-postbuild":"npm install"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -56,6 +43,20 @@
   },
   "devDependencies": {
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "mini-css-extract-plugin": "^0.9.0"
+    "mini-css-extract-plugin": "^0.9.0",
+    "style-loader": "^1.2.1",
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.11",
+    "css-loader": "^3.6.0",
+    "html-webpack-plugin": "^4.3.0",
+    "ignore-styles": "^5.0.1",
+    "isomorphic-style-loader": "^5.1.0",
+    "nodemon": "^2.0.4",
+    "npm-run-all": "^4.1.5",
+    "@babel/register": "^7.10.1",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
+    "react-scripts": "3.4.1"
   }
 }
